2009-06-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/NSMessagePort.m: Don't use NSLog() to report error
	when writing to mailslot ... it's usually just that the remote
	end has terminated, so invalidating the port silently is better.

2009-06-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSKeyedArchiver.h:
	* Headers/Foundation/NSArchiver.h:
	Fix error cleaning up a define.

2009-06-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistributedNotificationCenter.m: add explicit size casts
	to avoid compiler warnings.
	* Source/NSUserDefaults.m: Save defaults in xml format and add some
	error checking.
	* Source/NSPropertyList.m: tolerate NSNumber values used as dictionary
	keys, by using their string representation.

2009-06-09 Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/Source/GSSSLHandle.m: Disable v2 by default due to
	security issues.  GSPermitSSLv2 user default can enable it again.

2009-06-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Optimise somewhat for converting
	from unicode (UTF-2) to UTF-8
	* Source/GSString.m: Optimise 8 bit string equality tests a little.

2009-06-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Optimise case where we are converting
	from unicode to latin1 or ascii.
	* Source/GSString.m: Optimise -hash method of NXConstantString too.

2009-06-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSFFIInvocation.m
	(-initWithCallback:returnp:values:frame:signature:): Fix bug
	#26419 by removing bogus code which was used on targets where
	MFRAME_STRUCT_BYREF is defined.

2009-06-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: When converting from a characterset
	to unicode, and we know that there is a one to one correspondence
	between the characterset values and unicode values, shift the
	buffer sizing outsize the loop through the characters to avoid
	unnecessary checks for the end of the buffer in each iteration.